--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -91,7 +91,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 3,
       "id": "6156cb23",
       "metadata": {
         "id": "6156cb23"
@@ -103,7 +103,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 4,
       "id": "13f3da4e",
       "metadata": {
         "id": "13f3da4e"
@@ -181,7 +181,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 5,
       "id": "002efa45",
       "metadata": {
         "id": "002efa45"
@@ -207,7 +207,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 6,
       "id": "15507281",
       "metadata": {
         "colab": {
@@ -358,7 +358,7 @@
               "[5279 rows x 4 columns]"
             ]
           },
-          "execution_count": 25,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -371,7 +371,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 7,
       "id": "828001a4",
       "metadata": {
         "id": "828001a4"
@@ -405,7 +405,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 8,
       "id": "dd1f8072",
       "metadata": {
         "colab": {
@@ -556,7 +556,7 @@
               "[5279 rows x 4 columns]"
             ]
           },
-          "execution_count": 27,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -569,7 +569,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 9,
       "id": "f4bb516d",
       "metadata": {
         "id": "f4bb516d"
@@ -583,7 +583,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 10,
       "id": "c9c49881",
       "metadata": {
         "colab": {
@@ -734,7 +734,7 @@
               "[1086 rows x 4 columns]"
             ]
           },
-          "execution_count": 29,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -746,7 +746,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 11,
       "id": "b4a943b0",
       "metadata": {
         "colab": {
@@ -897,7 +897,7 @@
               "[4193 rows x 4 columns]"
             ]
           },
-          "execution_count": 30,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -929,16 +929,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 12,
       "id": "b27bec6e",
       "metadata": {
         "id": "b27bec6e"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "N-gram feature matrix created!\n",
+            "Train shape: (4193, 6472)\n",
+            "Test shape: (1086, 6472)\n"
+          ]
+        }
+      ],
       "source": [
         "# Feature extraction: N-grams\n",
         "from collections import defaultdict\n",
         "from sklearn.feature_extraction.text import ENGLISH_STOP_WORDS\n",
+        "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
         "\n",
         "# Function to generate n-grams from text, filtering stopwords\n",
         "def generate_ngrams(text, n=1):\n",
@@ -959,12 +970,34 @@
         "            if label == 'sexist':\n",
         "                sexist_ngrams[ng] += 1\n",
         "            else:\n",
-        "                nonsexist_ngrams[ng] += 1"
+        "                nonsexist_ngrams[ng] += 1\n",
+        "\n",
+        "\n",
+        "#TF-IDF with n-grams 1 to 3\n",
+        "ngram_vectorizer = TfidfVectorizer(\n",
+        "    ngram_range=(1,3),\n",
+        "    stop_words='english',\n",
+        "    min_df=2\n",
+        ")\n",
+        "\n",
+        "# Fit ONLY on training set (very important for Rule 1)\n",
+        "X_train_ngrams = ngram_vectorizer.fit_transform(train_df['text'])\n",
+        "\n",
+        "# Transform test set using the train vocabulary\n",
+        "X_test_ngrams = ngram_vectorizer.transform(test_df['text'])\n",
+        "\n",
+        "# Labels\n",
+        "y_train = train_df['label']\n",
+        "y_test = test_df['label']\n",
+        "\n",
+        "print(\"N-gram feature matrix created!\")\n",
+        "print(\"Train shape:\", X_train_ngrams.shape)\n",
+        "print(\"Test shape:\", X_test_ngrams.shape)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 13,
       "id": "c35f532f",
       "metadata": {
         "colab": {
@@ -998,53 +1031,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 33,
-      "id": "3b20c0dc",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "3b20c0dc",
-        "outputId": "84dafa32-11b3-4fd5-d465-9a669cab41ee"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "N-gram feature matrix created!\n",
-            "Train shape: (4193, 6472)\n",
-            "Test shape: (1086, 6472)\n"
-          ]
-        }
-      ],
-      "source": [
-        "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
-        "\n",
-        "#TF-IDF with n-grams 1 to 3\n",
-        "ngram_vectorizer = TfidfVectorizer(\n",
-        "    ngram_range=(1,3),\n",
-        "    stop_words='english',\n",
-        "    min_df=2\n",
-        ")\n",
-        "\n",
-        "# Fit ONLY on training set (very important for Rule 1)\n",
-        "X_train_ngrams = ngram_vectorizer.fit_transform(train_df['text'])\n",
-        "\n",
-        "# Transform test set using the train vocabulary\n",
-        "X_test_ngrams = ngram_vectorizer.transform(test_df['text'])\n",
-        "\n",
-        "# Labels\n",
-        "y_train = train_df['label']\n",
-        "y_test = test_df['label']\n",
-        "\n",
-        "print(\"N-gram feature matrix created!\")\n",
-        "print(\"Train shape:\", X_train_ngrams.shape)\n",
-        "print(\"Test shape:\", X_test_ngrams.shape)"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "id": "ba710505",
       "metadata": {
@@ -1066,7 +1052,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 14,
       "id": "FBKWgr28tjQ3",
       "metadata": {
         "colab": {
@@ -1108,7 +1094,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 15,
       "id": "5PAIY4Pmtl8E",
       "metadata": {
         "colab": {
@@ -1239,7 +1225,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 16,
       "id": "53603abd",
       "metadata": {
         "colab": {
@@ -1301,7 +1287,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 17,
       "id": "4-SKnkbAtt2_",
       "metadata": {
         "colab": {
@@ -1365,7 +1351,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 18,
       "id": "d3e05aee",
       "metadata": {},
       "outputs": [
@@ -1393,7 +1379,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 19,
       "id": "c024d9eb",
       "metadata": {},
       "outputs": [
@@ -1456,7 +1442,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 20,
       "id": "6560e7bc",
       "metadata": {
         "colab": {
@@ -1516,7 +1502,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 21,
       "id": "4d122302",
       "metadata": {},
       "outputs": [
@@ -1570,7 +1556,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 22,
       "id": "3093ae84",
       "metadata": {},
       "outputs": [
@@ -1604,6 +1590,193 @@
         "print(f\"SVM Test Accuracy (Combined): {accuracy_score(y_test, y_pred_svm_comb):.4f}\")\n",
         "print(\"\\nClassification Report (Combined SVM):\")\n",
         "print(classification_report(y_test, y_pred_svm_comb))\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 23,
+      "id": "420bf10c",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Label encoding completed: ['not sexist' 'sexist']\n"
+          ]
+        }
+      ],
+      "source": [
+        "from sklearn.preprocessing import LabelEncoder\n",
+        "\n",
+        "le = LabelEncoder()\n",
+        "y_train_enc = le.fit_transform(y_train)\n",
+        "y_test_enc = le.transform(y_test)\n",
+        "\n",
+        "print(\"Label encoding completed:\", le.classes_)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 24,
+      "id": "cc26b661",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "===== XGBOOST (METHOD 1 — WORD TF-IDF) =====\n",
+            "Accuracy: 0.8130755064456722\n",
+            "\n",
+            "Classification Report:\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.84      0.93      0.88       789\n",
+            "           1       0.72      0.52      0.60       297\n",
+            "\n",
+            "    accuracy                           0.81      1086\n",
+            "   macro avg       0.78      0.72      0.74      1086\n",
+            "weighted avg       0.80      0.81      0.80      1086\n",
+            "\n"
+          ]
+        }
+      ],
+      "source": [
+        "from xgboost import XGBClassifier\n",
+        "from sklearn.metrics import accuracy_score, classification_report\n",
+        "\n",
+        "xgb_model_1 = XGBClassifier(\n",
+        "    n_estimators=400,\n",
+        "    learning_rate=0.07,\n",
+        "    max_depth=6,\n",
+        "    subsample=0.9,\n",
+        "    colsample_bytree=0.9,\n",
+        "    eval_metric='logloss',\n",
+        "    tree_method='hist'\n",
+        ")\n",
+        "\n",
+        "xgb_model_1.fit(X_train_ngrams, y_train_enc)\n",
+        "\n",
+        "y_pred_xgb_1 = xgb_model_1.predict(X_test_ngrams)\n",
+        "\n",
+        "print(\"\\n===== XGBOOST (METHOD 1 — WORD TF-IDF) =====\")\n",
+        "print(\"Accuracy:\", accuracy_score(y_test_enc, y_pred_xgb_1))\n",
+        "print(\"\\nClassification Report:\")\n",
+        "print(classification_report(y_test_enc, y_pred_xgb_1))\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 25,
+      "id": "34d1bc0c",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "===== XGBOOST (METHOD 2 — CHAR TF-IDF) =====\n",
+            "Accuracy: 0.8195211786372008\n",
+            "\n",
+            "Classification Report:\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.83      0.94      0.88       789\n",
+            "           1       0.76      0.50      0.60       297\n",
+            "\n",
+            "    accuracy                           0.82      1086\n",
+            "   macro avg       0.79      0.72      0.74      1086\n",
+            "weighted avg       0.81      0.82      0.81      1086\n",
+            "\n"
+          ]
+        }
+      ],
+      "source": [
+        "xgb_model_2 = XGBClassifier(\n",
+        "    n_estimators=850,\n",
+        "    learning_rate=0.02,\n",
+        "    max_depth=6,\n",
+        "    subsample=0.9,\n",
+        "    colsample_bytree=0.9,\n",
+        "    eval_metric='logloss',\n",
+        "    tree_method='hist'\n",
+        ")\n",
+        "\n",
+        "xgb_model_2.fit(X_train_char, y_train_enc)\n",
+        "\n",
+        "y_pred_xgb_2 = xgb_model_2.predict(X_test_char)\n",
+        "\n",
+        "print(\"\\n===== XGBOOST (METHOD 2 — CHAR TF-IDF) =====\")\n",
+        "print(\"Accuracy:\", accuracy_score(y_test_enc, y_pred_xgb_2))\n",
+        "print(\"\\nClassification Report:\")\n",
+        "print(classification_report(y_test_enc, y_pred_xgb_2))\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 26,
+      "id": "ecdbb701",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Combined feature matrix created!\n",
+            "Train shape: (4193, 60156)\n",
+            "Test shape: (1086, 60156)\n",
+            "\n",
+            "===== XGBOOST (COMBINED MODEL) =====\n",
+            "Accuracy: 0.8222836095764272\n",
+            "\n",
+            "Classification Report:\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.83      0.94      0.89       789\n",
+            "           1       0.77      0.51      0.61       297\n",
+            "\n",
+            "    accuracy                           0.82      1086\n",
+            "   macro avg       0.80      0.72      0.75      1086\n",
+            "weighted avg       0.82      0.82      0.81      1086\n",
+            "\n"
+          ]
+        }
+      ],
+      "source": [
+        "from scipy.sparse import hstack\n",
+        "from xgboost import XGBClassifier\n",
+        "from sklearn.metrics import accuracy_score, classification_report\n",
+        "\n",
+        "# Combine WORD n-grams + CHAR n-grams\n",
+        "X_train_combined = hstack([X_train_ngrams, X_train_char])\n",
+        "X_test_combined = hstack([X_test_ngrams, X_test_char])\n",
+        "\n",
+        "print(\"Combined feature matrix created!\")\n",
+        "print(\"Train shape:\", X_train_combined.shape)\n",
+        "print(\"Test shape:\", X_test_combined.shape)\n",
+        "\n",
+        "# XGBoost model\n",
+        "xgb_model_3 = XGBClassifier(\n",
+        "    n_estimators=850,\n",
+        "    learning_rate=0.02,\n",
+        "    max_depth=7,\n",
+        "    subsample=0.85,\n",
+        "    colsample_bytree=0.85,\n",
+        "    eval_metric='logloss',\n",
+        "    tree_method='hist'\n",
+        ")\n",
+        "\n",
+        "xgb_model_3.fit(X_train_combined, y_train_enc)\n",
+        "\n",
+        "y_pred_xgb_3 = xgb_model_3.predict(X_test_combined)\n",
+        "\n",
+        "print(\"\\n===== XGBOOST (COMBINED MODEL) =====\")\n",
+        "print(\"Accuracy:\", accuracy_score(y_test_enc, y_pred_xgb_3))\n",
+        "print(\"\\nClassification Report:\")\n",
+        "print(classification_report(y_test_enc, y_pred_xgb_3))\n"
       ]
     }
   ],
