--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -91,7 +91,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 28,
       "id": "6156cb23",
       "metadata": {
         "id": "6156cb23"
@@ -103,7 +103,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 29,
       "id": "13f3da4e",
       "metadata": {
         "id": "13f3da4e"
@@ -181,7 +181,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 30,
       "id": "002efa45",
       "metadata": {
         "id": "002efa45"
@@ -207,7 +207,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 31,
       "id": "15507281",
       "metadata": {
         "colab": {
@@ -358,7 +358,7 @@
               "[5279 rows x 4 columns]"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 31,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -371,7 +371,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 32,
       "id": "828001a4",
       "metadata": {
         "id": "828001a4"
@@ -405,7 +405,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 33,
       "id": "dd1f8072",
       "metadata": {
         "colab": {
@@ -556,7 +556,7 @@
               "[5279 rows x 4 columns]"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 33,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -569,7 +569,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 34,
       "id": "f4bb516d",
       "metadata": {
         "id": "f4bb516d"
@@ -583,7 +583,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 35,
       "id": "c9c49881",
       "metadata": {
         "colab": {
@@ -734,7 +734,7 @@
               "[1086 rows x 4 columns]"
             ]
           },
-          "execution_count": 10,
+          "execution_count": 35,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -746,7 +746,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 36,
       "id": "b4a943b0",
       "metadata": {
         "colab": {
@@ -897,7 +897,7 @@
               "[4193 rows x 4 columns]"
             ]
           },
-          "execution_count": 11,
+          "execution_count": 36,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -929,7 +929,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 37,
       "id": "b27bec6e",
       "metadata": {
         "id": "b27bec6e"
@@ -997,7 +997,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 38,
       "id": "c35f532f",
       "metadata": {
         "colab": {
@@ -1052,7 +1052,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 39,
       "id": "FBKWgr28tjQ3",
       "metadata": {
         "colab": {
@@ -1094,7 +1094,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 40,
       "id": "5PAIY4Pmtl8E",
       "metadata": {
         "colab": {
@@ -1225,7 +1225,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 41,
       "id": "53603abd",
       "metadata": {
         "colab": {
@@ -1239,17 +1239,17 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Test Accuracy: 0.7808\n",
+            "Test Accuracy: 0.7643\n",
             "\n",
             "Classification Report:\n",
             "              precision    recall  f1-score   support\n",
             "\n",
-            "  not sexist       0.78      0.97      0.87       789\n",
-            "      sexist       0.77      0.28      0.41       297\n",
+            "  not sexist       0.87      0.80      0.83       789\n",
+            "      sexist       0.56      0.67      0.61       297\n",
             "\n",
-            "    accuracy                           0.78      1086\n",
-            "   macro avg       0.78      0.63      0.64      1086\n",
-            "weighted avg       0.78      0.78      0.74      1086\n",
+            "    accuracy                           0.76      1086\n",
+            "   macro avg       0.71      0.73      0.72      1086\n",
+            "weighted avg       0.78      0.76      0.77      1086\n",
             "\n"
           ]
         }
@@ -1260,7 +1260,12 @@
         "from sklearn.metrics import classification_report, accuracy_score\n",
         "\n",
         "# Create and train the model\n",
-        "log_model = LogisticRegression(max_iter=200)\n",
+        "log_model = log_model = LogisticRegression(\n",
+        "    max_iter=5000,\n",
+        "    solver=\"liblinear\",\n",
+        "    class_weight=\"balanced\",\n",
+        "    C=0.5\n",
+        ")\n",
         "log_model.fit(X_train_ngrams, y_train)\n",
         "\n",
         "# Predictions\n",
@@ -1272,6 +1277,7 @@
         "\n",
         "# Classification report\n",
         "print(\"\\nClassification Report:\")\n",
+        "A=classification_report(y_test, y_pred)\n",
         "print(classification_report(y_test, y_pred))\n"
       ]
     },
@@ -1287,7 +1293,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 42,
       "id": "4-SKnkbAtt2_",
       "metadata": {
         "colab": {
@@ -1338,6 +1344,7 @@
         "\n",
         "# Classification report\n",
         "print(\"\\nClassification Report:\")\n",
+        "B=classification_report(y_test, y_pred)\n",
         "print(classification_report(y_test, y_pred))"
       ]
     },
@@ -1351,7 +1358,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 43,
       "id": "d3e05aee",
       "metadata": {},
       "outputs": [
@@ -1379,7 +1386,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 44,
       "id": "c024d9eb",
       "metadata": {},
       "outputs": [
@@ -1419,6 +1426,7 @@
         "\n",
         "print(f\"Test Accuracy (Combined): {accuracy_score(y_test, y_pred_combined):.4f}\")\n",
         "print(\"\\nClassification Report (Combined Logistic Regression):\")\n",
+        "C=classification_report(y_test, y_pred_combined)\n",
         "print(classification_report(y_test, y_pred_combined))\n"
       ]
     },
@@ -1442,7 +1450,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 45,
       "id": "6560e7bc",
       "metadata": {
         "colab": {
@@ -1489,6 +1497,7 @@
         "\n",
         "# Classification report\n",
         "print(\"\\nClassification Report (SVM):\")\n",
+        "D=classification_report(y_test, y_pred_svm)\n",
         "print(classification_report(y_test, y_pred_svm))\n"
       ]
     },
@@ -1502,7 +1511,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 46,
       "id": "4d122302",
       "metadata": {},
       "outputs": [
@@ -1543,6 +1552,7 @@
         "\n",
         "# Classification report\n",
         "print(\"\\nClassification Report (SVM - Char TF-IDF):\")\n",
+        "E=classification_report(y_test, y_pred_svm_char)\n",
         "print(classification_report(y_test, y_pred_svm_char))\n"
       ]
     },
@@ -1556,7 +1566,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 47,
       "id": "3093ae84",
       "metadata": {},
       "outputs": [
@@ -1589,12 +1599,21 @@
         "\n",
         "print(f\"SVM Test Accuracy (Combined): {accuracy_score(y_test, y_pred_svm_comb):.4f}\")\n",
         "print(\"\\nClassification Report (Combined SVM):\")\n",
+        "F=classification_report(y_test, y_pred_svm_comb)\n",
         "print(classification_report(y_test, y_pred_svm_comb))\n"
       ]
     },
     {
+      "cell_type": "markdown",
+      "id": "c4446c23",
+      "metadata": {},
+      "source": [
+        "## Model 3 - XGBOOST"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 48,
       "id": "420bf10c",
       "metadata": {},
       "outputs": [
@@ -1617,8 +1636,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "id": "cb331851",
+      "metadata": {},
+      "source": [
+        "## Feature Method 1"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 49,
       "id": "cc26b661",
       "metadata": {},
       "outputs": [
@@ -1664,12 +1691,21 @@
         "print(\"\\n===== XGBOOST (METHOD 1 — WORD TF-IDF) =====\")\n",
         "print(\"Accuracy:\", accuracy_score(y_test_enc, y_pred_xgb_1))\n",
         "print(\"\\nClassification Report:\")\n",
+        "G=classification_report(y_test_enc, y_pred_xgb_1)\n",
         "print(classification_report(y_test_enc, y_pred_xgb_1))\n"
       ]
     },
     {
+      "cell_type": "markdown",
+      "id": "76e13cc2",
+      "metadata": {},
+      "source": [
+        "## Feature Method 2"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 50,
       "id": "34d1bc0c",
       "metadata": {},
       "outputs": [
@@ -1712,12 +1748,21 @@
         "print(\"\\n===== XGBOOST (METHOD 2 — CHAR TF-IDF) =====\")\n",
         "print(\"Accuracy:\", accuracy_score(y_test_enc, y_pred_xgb_2))\n",
         "print(\"\\nClassification Report:\")\n",
+        "H=classification_report(y_test_enc, y_pred_xgb_2)\n",
         "print(classification_report(y_test_enc, y_pred_xgb_2))\n"
       ]
     },
     {
+      "cell_type": "markdown",
+      "id": "b3b8ca15",
+      "metadata": {},
+      "source": [
+        "## Combinated Methods"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 51,
       "id": "ecdbb701",
       "metadata": {},
       "outputs": [
@@ -1776,7 +1821,149 @@
         "print(\"\\n===== XGBOOST (COMBINED MODEL) =====\")\n",
         "print(\"Accuracy:\", accuracy_score(y_test_enc, y_pred_xgb_3))\n",
         "print(\"\\nClassification Report:\")\n",
+        "I=classification_report(y_test_enc, y_pred_xgb_3)\n",
         "print(classification_report(y_test_enc, y_pred_xgb_3))\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 58,
+      "id": "383dee60",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "  not sexist       0.87      0.80      0.83       789\n",
+            "      sexist       0.56      0.67      0.61       297\n",
+            "\n",
+            "    accuracy                           0.76      1086\n",
+            "   macro avg       0.71      0.73      0.72      1086\n",
+            "weighted avg       0.78      0.76      0.77      1086\n",
+            "\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "  not sexist       0.86      0.83      0.84       789\n",
+            "      sexist       0.59      0.64      0.61       297\n",
+            "\n",
+            "    accuracy                           0.78      1086\n",
+            "   macro avg       0.72      0.73      0.73      1086\n",
+            "weighted avg       0.78      0.78      0.78      1086\n",
+            "\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "  not sexist       0.88      0.84      0.86       789\n",
+            "      sexist       0.61      0.69      0.65       297\n",
+            "\n",
+            "    accuracy                           0.80      1086\n",
+            "   macro avg       0.74      0.76      0.75      1086\n",
+            "weighted avg       0.80      0.80      0.80      1086\n",
+            "\n"
+          ]
+        }
+      ],
+      "source": [
+        "#Logistic Regression\n",
+        "print(A)\n",
+        "print(B)\n",
+        "print(C)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 57,
+      "id": "386918c6",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "  not sexist       0.83      0.87      0.85       789\n",
+            "      sexist       0.60      0.52      0.56       297\n",
+            "\n",
+            "    accuracy                           0.77      1086\n",
+            "   macro avg       0.71      0.69      0.70      1086\n",
+            "weighted avg       0.77      0.77      0.77      1086\n",
+            "\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "  not sexist       0.82      0.92      0.87       789\n",
+            "      sexist       0.70      0.48      0.57       297\n",
+            "\n",
+            "    accuracy                           0.80      1086\n",
+            "   macro avg       0.76      0.70      0.72      1086\n",
+            "weighted avg       0.79      0.80      0.79      1086\n",
+            "\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "  not sexist       0.85      0.85      0.85       789\n",
+            "      sexist       0.59      0.60      0.60       297\n",
+            "\n",
+            "    accuracy                           0.78      1086\n",
+            "   macro avg       0.72      0.72      0.72      1086\n",
+            "weighted avg       0.78      0.78      0.78      1086\n",
+            "\n"
+          ]
+        }
+      ],
+      "source": [
+        "#SVM\n",
+        "print(D)\n",
+        "print(E)\n",
+        "print(F)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 59,
+      "id": "fb08e63a",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.84      0.93      0.88       789\n",
+            "           1       0.72      0.52      0.60       297\n",
+            "\n",
+            "    accuracy                           0.81      1086\n",
+            "   macro avg       0.78      0.72      0.74      1086\n",
+            "weighted avg       0.80      0.81      0.80      1086\n",
+            "\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.83      0.94      0.88       789\n",
+            "           1       0.76      0.50      0.60       297\n",
+            "\n",
+            "    accuracy                           0.82      1086\n",
+            "   macro avg       0.79      0.72      0.74      1086\n",
+            "weighted avg       0.81      0.82      0.81      1086\n",
+            "\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.83      0.94      0.89       789\n",
+            "           1       0.77      0.51      0.61       297\n",
+            "\n",
+            "    accuracy                           0.82      1086\n",
+            "   macro avg       0.80      0.72      0.75      1086\n",
+            "weighted avg       0.82      0.82      0.81      1086\n",
+            "\n"
+          ]
+        }
+      ],
+      "source": [
+        "#XGBOOST\n",
+        "print(G)\n",
+        "print(H)\n",
+        "print(I)"
       ]
     }
   ],
